--- a/static/Edit/css/style/style.css
+++ b/static/Edit/css/style/style.css
@@ -152,12 +152,13 @@ html,body{
 	text-overflow:ellipsis;
 	font-size: 15px;
 	font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
-	
-}
-.list-node a{
-	color: #34495e;
+
 }
 
+
+.list-node:hover{
+	text-decoration:underline;
+}
 #editer{
 	width: 300px;
 	height: 30px;
@@ -182,4 +183,18 @@ html,body{
 	width: 29px;
 	height: 29px;
 	margin-left: 20px;
+}
+
+#Button-select{
+	width: 300px;
+	height: 50px;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+}
+.select-list{
+	width: 50px;
+	height: 49px;
+	float: left;
+	cursor: pointer;
 }
